src/main/webapp/less/filterPanel.less
.Filter{
	.popover{
		display:block;
		width:350px;
		max-width:500px;
		.popover-content{
			padding:9px 0;
		}
		.selectedItems{
			border-bottom:1px solid #BDB8B8;
			padding-left:14px;
			padding-right:14px;
			.item{
				padding: 4px 25px 4px 10px;
				border-radius: 10px;
                margin: 2px 2px 5px 2px;
				display: inline-block;
				position:relative;
				font-size: 12px;
				color:#fff;
			}
			.add{
				cursor:pointer;
				display:inline-block;
			}
		}
		
		.content{
			   span{
		    	 display: inline-block;
				 width: 50px;
				 padding-left: 10px;
			   }
			   input[type="text"]{
				 width:280px;
			   }
			   .save{
			   	 float: right;
				 margin-right: 16px;
				 padding: 2px 24px;
				 margin-bottom: 10px;
				 margin-top: 5px;
			   }
				
			  .cancel{
			   	 float: right;
				 margin-right: 16px;
				 padding: 2px 24px;
				 margin-bottom: 10px;
				 margin-top: 5px;
			   }
               .sliderRow {
                 position: relative;
                 height: 30px;
                 .sliderBarContainer {
                   width: 220px;
                   height: 5px;
                   float: left
                 }

                 span {
                   display:block;
                   width:80px;
                   font-size: 10px;
                   float: left;
                   padding-top: 10px;
                 }
               }
				.progressContainer{
					position:relative;
					margin-left: 80px;
					margin-top: -20px;
				}
				.contentText{
					display:inline-block;
					text-align:center;
					width:100%;
					cursor:pointer;
					padding:2px;
				}
		}
		
		
		.switch-icon{
			width:20px;
			height:27px;
			border: 1px solid #ccc;
			background: linear-gradient(180deg, #ffffff 0%,#dcdcdc 100%);
			top: -4px;
			left: 20%;
			padding: 2px 5px;
			position:absolute;
			cursor:pointer;
		}
		
	    .clear{
	      position: absolute;
	      font-size: 12px;
		  width: 14px;
		  height: 14px;
		  text-align: center;
		  line-height: 14px;
	      vertical-align: middle;
	      border-radius:18px;
	      cursor: pointer;
	      background:#000;
	      color:#ffffff;
	      font-family: monospace;
	      padding-top: 0px;
	      padding-left: 0px;
	      right:2px;
	      margin-top: 3px;
	    }
	    .glyphicon-remove{
	    	cursor:pointer;
	    }
	    .autoComplete{
	    	width: 94%;
			margin-bottom: 5px;
	    }
	}
}

